# lambda

./: README.md  lambda.hs
1/: Lambda.hs
2/: Lambda.hs  lambda.cabal
3/: Lambda.hs
