name:                Lambda
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Webber
maintainer:          webber.sl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable lambda
  build-depends:
                base,
                catamorphism
  default-language:    Haskell2010
  main-is:             Lambda.hs
